--- a/src/components/main/introducetop/introducetop.css
+++ b/src/components/main/introducetop/introducetop.css
@@ -35,19 +35,63 @@
 }
 
 .introduce-top-text__link {
-  color: #eb0028;
+  color: #fff;
+  /* background-color: #eb0028; */
+  /* border: 1px solid #eb0028; */
+  height: 40px;
   font-size: 1.4rem;
   font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  text-decoration: underline;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-decoration: none;
 }
 
-.introduce-top-text__link:hover {
+/* .introduce-top-text__link:hover {
   opacity: 0.5;
+  background-color: #eb0028;
+  color: #fff;
+} */
+
+.btn-9 {
+  border: none;
+  transition: all 0.3s ease;
+  overflow: hidden;
 }
+.btn-9:after {
+  position: absolute;
+  content: " ";
+  z-index: -1;
+  border-radius: 4px;
+  top: 199px;
+  left: 293px;
+  width: 175px;
+  height: 40px;
+  background-color: #1fd1f9;
+  background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
+  transition: all 0.3s ease;
+}
+.btn-9:hover {
+  background: transparent;
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5),
+    -4px -4px 6px 0 rgba(116, 125, 136, 0.2),
+    inset -4px -4px 6px 0 rgba(255, 255, 255, 0.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3);
+  color: #fff;
+}
+.btn-9:hover:after {
+  -webkit-transform: scale(1) rotate(180deg);
+  transform: scale(1) rotate(180deg);
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5),
+    -4px -4px 6px 0 rgba(116, 125, 136, 0.2),
+    inset -4px -4px 6px 0 rgba(255, 255, 255, 0.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3);
+}
+
+
 
 @media screen and (max-width: 960px) {
   .introduce-top-image {
